--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,7 +97,17 @@ body {
     --ring: 212.7 26.8% 83.9%;
   }
 }
+/* // <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900 */
 
+.noto-sans-display-<uniquifier> {
+  font-family: "Noto Sans Display", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 @layer base {
   * {
     @apply border-border;
