--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,17 +97,7 @@ body {
     --ring: 212.7 26.8% 83.9%;
   }
 }
-/* // <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900 */
 
-.noto-sans-display-<uniquifier> {
-  font-family: "Noto Sans Display", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
 @layer base {
   * {
     @apply border-border;
@@ -116,29 +106,34 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
 .chat-bubble {
   background-color: #f1f1f1;
   padding: 16px 28px;
-  -webkit-border-t-radius: 10px;
+  -webkit-border-top-right-radius: 10px;
   -webkit-border-bottom-left-radius: 2px;
-  -moz-border-t-radius: 10px;
+  -moz-border-radius-topright: 10px;
   -moz-border-radius-bottomleft: 2px;
-  border-radius: 10px;
+  border-top-right-radius: 10px;
   border-bottom-left-radius: 2px;
   display: inline-block;
 }
+
 .typing {
   align-items: center;
   display: flex;
   height: 17px;
 }
+
 .typing .dot {
   animation: mercuryTypingAnimation 1.8s infinite ease-in-out;
   background-color: #ffc989;
@@ -149,15 +144,19 @@ body {
   width: 7px;
   display: inline-block;
 }
+
 .typing .dot:nth-child(1) {
   animation-delay: 200ms;
 }
+
 .typing .dot:nth-child(2) {
   animation-delay: 300ms;
 }
+
 .typing .dot:nth-child(3) {
   animation-delay: 400ms;
 }
+
 .typing .dot:last-child {
   margin-right: 0;
 }
